Refactor TiendaOnline to use Maps for efficient article, client, and order management; implement custom exceptions and improve null handling with Optionals.